--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -12,6 +12,12 @@
   justify-content: space-between;
   align-items: center;
 }
+.brandName{
+  color: #2e1dbcf7;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-shadow: 2px 2px 3px #7c98d4;
+}
 
 .placeSearch {
   width: 16em;
