--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -14,15 +14,28 @@
     border-left-color: transparent;
     border-right-color: transparent;
     outline-color: transparent;
+    width: 300px;
+    height: 30px;
+    margin: 10px 0;
+  }
+  .logo-heading{
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    color: #2e1dbcf7;
   }
   
   .loginParentDiv button {
     width: 100%;
     height: 48px;
     /* border-color: transparent; */
-    background-color: #002f34;
+   
     color: whitesmoke;
     font-weight: 900;
+    background-color: #2deb15;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: .3rem;
   }
   .loginParentDiv button:hover {
     background-color: white;
