--- a/src/Components/Create/Create.css
+++ b/src/Components/Create/Create.css
@@ -1,18 +1,30 @@
 .centerDiv {
-    border: 1px solid black;
+  
     width: max-content;
-    padding: 50px;
+    padding: 30px 50px;
     position: absolute;
     top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border-radius: 6px;
+    border-radius: 28px;
+background: #e0e0e0;
+box-shadow:  19px 19px 37px #b1b1b1,
+             -19px -19px 37px #ffffff;
   }
-  .input {
-    border-top-color: transparent;
+  .input1 {
+    /* border-top-color: transparent;
     border-left-color: transparent;
     border-right-color: transparent;
-    outline-color: transparent;
+    outline-color: transparent; */
+    border: none;
+    width: 200px;
+    height: 35px;
+    padding: 0 10px;
+    border-radius: 28px;
+background: linear-gradient(145deg, #cacaca, #f0f0f0);
+box-shadow:  19px 19px 37px #b1b1b1,
+             -19px -19px 37px #ffffff;
+    
   }
   
   .uploadBtn {
@@ -20,7 +32,7 @@
     width: 100%;
     height: 48px;
     /* border-color: transparent; */
-    background-color: #002f34;
+    background-color: #2e1dbcf7;
     color: whitesmoke;
     font-weight: 900;
   }
