--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -21,7 +21,7 @@ button{
     color:  black;
     width: 150px;
     height: 50px;
-    margin: 10px;
+    margin: 10px 0;
     border: none;
     border-radius: 10px;
 
