--- a/src/Components/Create/Create.css
+++ b/src/Components/Create/Create.css
@@ -12,20 +12,22 @@ box-shadow:  19px 19px 37px #b1b1b1,
              -19px -19px 37px #ffffff;
   }
   .input1 {
-    /* border-top-color: transparent;
+    /*border-top-color: transparent;
     border-left-color: transparent;
     border-right-color: transparent;
-    outline-color: transparent; */
-    border: none;
+    outline-color: transparent;
+    */border: none;
     width: 200px;
     height: 35px;
     padding: 0 10px;
-    border-radius: 28px;
-background: linear-gradient(145deg, #cacaca, #f0f0f0);
-box-shadow:  19px 19px 37px #b1b1b1,
-             -19px -19px 37px #ffffff;
-    
-  }
+    border-radius: 10px;
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow:  19px 19px 37px #b1b1b1,             -19px -19px 37px #ffffff;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
   
   .uploadBtn {
     margin-top: 30px;
