--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -14,19 +14,22 @@ box-shadow:  19px 19px 37px #b1b1b1,
   }
   
   .loginParentDiv .input {
-    /* border-top-color: transparent;
+    /*border-top-color: transparent;
     border-left-color: transparent;
     border-right-color: transparent;
-    outline-color: transparent; */
-    width: 250px;
+    outline-color: transparent;
+    */width: 250px;
     height: 40px;
     margin: 10px 0;
     border: none;
     padding: 0 10px;
-    border-radius: 28px;
+    border-radius: 10px;
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
-    box-shadow:  19px 19px 37px #b1b1b1,
-                 -19px -19px 37px #ffffff;
+    box-shadow:  19px 19px 37px #b1b1b1,                 -19px -19px 37px #ffffff;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
   .logo-heading{
     font-size: 50px;
