--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -13,20 +13,50 @@
     font-size: 20px;
     font-weight: bold;
 }
+.content-welcome{
+    font-size: 1.8rem;
+    padding-top: 30px;
+}
+.logo{
+    color: #2e1dbcf7;
+    font-size: 4rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px #7c98d4;
+
+}
+.logo-content{
+    color: #2e1dbcf7;
+    font-size: 1rem;
+    font-weight: lighter;
+    text-shadow: 2px 2px 3px #7c98d4;
+    padding-left: 70px;
+    margin-top: -10px;
+}
 .btn-side{
     display: grid;
     place-content: center;
 }
-button{
-    color:  black;
-    width: 150px;
-    height: 50px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 10px;
 
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-}
+
+/* Define the button styles */
+.neomorph-button {
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    background-color: #333;
+    /* Add the neomorphism effect */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3),
+                inset 2px 2px 10px rgba(255, 255, 255, 0.3);
+    transform: rotate(2deg);
+  }
+  
+  /* Add hover effect */
+  .neomorph-button:hover {
+    transform: rotate(4deg);
+  }
+  
