--- a/src/Components/Posts/Post.css
+++ b/src/Components/Posts/Post.css
@@ -107,3 +107,15 @@
   font-size: 24px;
   color: #002f34;
 }
+@media(max-width: 678px){
+  .moreView .cards{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 424px) {
+  .moreView .cards{
+    grid-template-columns: 1fr
+  }
+ 
+}
+
