--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -61,4 +61,13 @@ box-shadow:  19px 19px 37px #b1b1b1,
     justify-content: center;
     cursor: pointer;
   }
+
+@media(max-width: 400px)
+{
+  .loginParentDiv{
+    width: 90%;
+    margin: 0;
+    padding: 30px;
+  }
+}
   
